--- a/src/components/CompanyHomepage/Styles.module.css
+++ b/src/components/CompanyHomepage/Styles.module.css
@@ -1,6 +1,6 @@
 .dropDown {
-  outline: solid 2px red;
-  height: 500px;
+  /* outline: solid 2px red; */
+  height: 70vh;
   overflow-y: auto;
   overflow-x: hidden;
 }
@@ -12,7 +12,7 @@
   width: 100%;
   display: flex;
   justify-content: center;
-  background-color: coral;
+  background-color: rgb(255, 255, 255);
   z-index: 100;
 }
 .dropDown::-webkit-scrollbar {
@@ -22,6 +22,23 @@
 .card {
   display: flex !important;
   justify-content: space-around !important;
+  background-color: rgb(226, 226, 226);
+  height: 135px;
+}
+
+.companyCard {
+  display: flex !important;
+  justify-content: space-around !important;
+  background-color: rgb(226, 226, 226);
+  height: 400px !important;
+  border: 2px grey solid;
+  border-radius: 20px;
+  margin-top: 50px;
+}
+.aplication {
+  border: 2px grey solid;
+  border-radius: 20px;
+  background-color: rgb(255, 255, 255);
 }
 
 .company {
@@ -29,9 +46,90 @@
   margin: 0 !important;
 }
 .about {
+  font-size: 20px;
+  font-weight: bold;
   overflow: hidden;
   text-overflow: ellipsis;
   display: -webkit-box;
-  -webkit-line-clamp: 2; /* number of lines to show */
+  -webkit-line-clamp: 2;
   -webkit-box-orient: vertical;
+}
+
+.description {
+  outline: 2px solid red;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+}
+
+.img {
+  height: 100px;
+  width: 150px;
+  border: 2px grey solid;
+}
+
+.card2 {
+  border: none;
+  background-color: white;
+  border-radius: 20px !important ;
+  height: 135px;
+}
+.col {
+  text-align: end;
+}
+.button {
+  font-weight: bolder;
+  font-size: large;
+  color: rgb(168, 50, 7);
+  height: 30px;
+  padding-top: 0px;
+  text-decoration: underline;
+  font-style: italic;
+}
+.next {
+  /* width: 500px; */
+}
+.next a > span {
+  background-color: black;
+}
+.dropdownToggle:after {
+  content: none !important;
+  border: 0px !important;
+}
+.dropdownToggle:active {
+  content: none !important;
+  border: 0px !important;
+}
+.singleRow {
+  display: flex;
+  justify-content: space-between;
+  border: 2px solid grey;
+  border-radius: 20px;
+  /* width: 400px; */
+}
+@media only screen and (max-width: 768px) {
+  .img {
+    margin-left: 35%;
+    margin-left: auto;
+    margin-right: auto;
+  }
+  .col {
+    text-align: center !important;
+  }
+  .dropDown {
+    height: 60vh;
+  }
+  .aplication {
+    width: 200px !important;
+  }
+  /* .next {
+    width: 700px;
+  } */
+}
+.images {
+  width: 80px;
+  height: 80px;
+  border-radius: 50%;
 }
