--- a/src/components/CompanyHomepage/Styles.module.css
+++ b/src/components/CompanyHomepage/Styles.module.css
@@ -1,3 +1,8 @@
+* {
+  margin: 0;
+  padding: 0;
+}
+
 .title {
   font-size: 25px;
   color: rgb(247, 111, 54);
@@ -91,6 +96,7 @@
   background-size: 200% auto;
   color: rgb(63, 69, 95);
   font-weight: bolder;
+  font-size: 15px;
 
   /* border-radius: 10px; */
   /* display: block; */
@@ -181,7 +187,7 @@
   display: flex;
   justify-content: space-between;
   border: 2px solid rgb(226, 117, 15);
-  border-radius: 20px;
+  border-radius: 10px;
   background-color: rgb(239 239 239 / 92%);
 }
 .singleRow:active {
@@ -273,5 +279,9 @@
   .icon {
     font-size: 10px;
     margin-right: 2px;
+  }
+  .btngrad {
+    font-size: 9px;
+    padding: 2%;
   }
 }
