--- a/src/components/CompanyHomepage/Styles.module.css
+++ b/src/components/CompanyHomepage/Styles.module.css
@@ -35,10 +35,11 @@
   height: 85vh;
   overflow-y: auto;
   overflow-x: hidden;
+  box-shadow: 7px 7px 7px rgb(148, 148, 148);
 }
 .dropDown123 {
   /* outline: solid 2px red; */
-
+  height: auto;
   overflow-y: auto;
   overflow-x: hidden;
 }
@@ -74,7 +75,7 @@
   margin-top: 50px;
 }
 .aplication {
-  border: 2px rgb(63, 69, 95) solid;
+  box-shadow: 7px 7px 7px rgb(148, 148, 148);
   height: 85vh;
   background-color: rgb(255, 255, 255);
 }
@@ -172,9 +173,6 @@
   font-style: italic;
 }
 
-.next a > span {
-  background-color: black;
-}
 .dropdownToggle:after {
   content: none !important;
   border: 0px !important;
@@ -182,20 +180,6 @@
 .dropdownToggle:active {
   content: none !important;
   border: 0px !important;
-}
-.singleRow {
-  display: flex;
-  justify-content: space-between;
-  border: 2px solid rgb(226, 117, 15);
-  border-radius: 10px;
-  background-color: rgb(239 239 239 / 92%);
-}
-.singleRow:active {
-  display: flex;
-  justify-content: space-between;
-  border: 2px solid rgb(63, 69, 95);
-  border-radius: 20px;
-  background-color: rgb(239 239 239 / 92%);
 }
 
 .images {
@@ -235,6 +219,103 @@
 .icon {
   margin-top: 3px;
   margin-left: 5px;
+}
+
+.custab {
+  table-layout: fixed;
+  border-collapse: collapse;
+  width: 100%;
+  height: 40px;
+  border-bottom: 1px grey;
+  color: rgb(63, 69, 95);
+}
+
+.custab:hover {
+  box-shadow: 7px 7px 7px rgb(148, 148, 148);
+  transition: 0.5s;
+  /* font-size: 110% !important; */
+  /* box-shadow: 3px 3px 0px transparent;
+  transition: 0.5s; */
+}
+
+.cartblock:hover {
+  box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.3);
+  border: 0;
+}
+.cartblock {
+  float: left;
+  width: 100%;
+  background: #fff;
+  /* padding: 30px 20px; */
+  text-align: center;
+  border: 2px solid #d5d5d5;
+  margin: 0 0 28px;
+}
+
+.cartblock img {
+  width: 80px;
+  height: 80px;
+  border-radius: 100%;
+  padding-top: 0 !important;
+}
+.cartblock h3 {
+  color: #2a2a2a;
+  font-size: 15px;
+  font-weight: 500;
+  padding: 6px 0;
+  text-transform: uppercase;
+}
+.cartblock h3 {
+  text-decoration: none;
+  overflow: hidden;
+  color: #2a2a2a;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-line-clamp: 1;
+  -webkit-box-orient: vertical;
+}
+.cartblock h6 {
+  text-transform: uppercase;
+  text-overflow: ellipsis;
+  font-size: 12px;
+  overflow: hidden;
+  display: -webkit-box;
+  -webkit-line-clamp: 1;
+  -webkit-box-orient: vertical;
+}
+.cartblock h3:hover {
+  color: #337ab7;
+}
+.cartblockp {
+  color: #2a2a2a;
+  font-size: 13px;
+  line-height: 20px;
+  font-weight: 400;
+}
+.cartblock .follow-us {
+  margin: 20px 0 0;
+}
+.cartblock .follow-us li {
+  display: inline-block;
+  width: auto;
+  margin: 0 5px;
+}
+.cartblock .follow-us li .fa {
+  font-size: 24px;
+  color: #767676;
+}
+.cartblock .follow-us li .fa:hover {
+  color: #025a8e;
+}
+
+.users {
+  height: 185px;
+}
+
+@media only screen and (max-width: 640px) {
+  .custab {
+    height: auto;
+  }
 }
 @media only screen and (max-width: 768px) {
   .img {
@@ -283,5 +364,33 @@
   .btngrad {
     font-size: 9px;
     padding: 2%;
+  }
+  .cartblock img {
+    width: 50px;
+    height: 50px;
+    border-radius: 100%;
+    padding-top: 0 !important;
+  }
+  .cartblock h3 {
+    font-size: 10px;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-line-clamp: 1;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+  }
+  .cartblock h6 {
+    font-size: 10px;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-line-clamp: 1;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+  }
+  .cartblock {
+    height: 130px;
+  }
+  .users {
+    height: 130px;
   }
 }
