--- a/src/components/ProfileCompany/Styles.module.css
+++ b/src/components/ProfileCompany/Styles.module.css
@@ -8,7 +8,7 @@
   width: 80%;
   margin-left: auto !important;
   margin-right: auto !important;
-  margin-top: 30px !important;
+  margin-top: 20px !important;
   box-shadow: 5px 5px 5px 5px rgba(206, 206, 206, 0.938);
   background-image: url("https://res.cloudinary.com/dle6fzc1o/image/upload/v1604661577/backgroundimage/Untitled_design_1_aggaly.png");
   background-size: cover;
@@ -19,23 +19,13 @@
   margin-right: auto !important;
 
   height: auto;
-  /* box-shadow: 3px 3px 3px rgba(206, 206, 206, 0.938); */
-  /* margin-left: auto !important; */
-  /* margin-right: auto !important; */
 }
-.tabs {
-  box-shadow: 5px 5px 5px rgba(206, 206, 206, 0.938);
-}
-.tabs tr:hover {
-  box-shadow: 3px 3px 3px rgba(173, 172, 172, 0.938);
-  text-align: center;
-}
-.tabs tr {
-  height: 20px !important;
-}
-
-.tabs td {
-  text-align: center;
+.about {
+  width: 100% !important;
+  margin-left: auto !important;
+  margin-right: auto !important;
+  outline: 2px solid red;
+  height: auto;
 }
 
 .imgProfile {
@@ -51,11 +41,76 @@
 .dataInfo {
   box-shadow: 3px 3px 3px 3px rgba(212, 212, 212, 0.938);
   background-color: white;
-  height: 250px;
+  height: 260px;
+  color: rgb(63, 69, 95);
 }
-.dataInfo h6 {
-  margin: 5px;
+.dataInfo div {
+  display: flex;
+  margin-left: 15px;
+  margin-top: 15px;
+  margin-right: 15px;
+  /* box-shadow: 3px 3px 3px 3px rgba(212, 212, 212, 0.938); */
 }
-.dataInfo p {
-  margin: 5px;
+
+.dataInfo div > h6 {
+  margin-left: 10px;
+}
+.dataInfo div > svg {
+  font-size: 18px;
+}
+.dataInfo div > svg:hover {
+  cursor: pointer;
+}
+.dataInfo div > h6:hover {
+  cursor: pointer;
+}
+
+.dataInfo div > h5:hover {
+  cursor: pointer;
+}
+
+.btngrad {
+  text-align: center;
+  text-transform: uppercase;
+  transition: 0.5s;
+  background-size: auto;
+  color: rgb(63, 69, 95);
+  font-weight: bolder;
+  font-size: 15px;
+
+  border: none;
+}
+
+.btngrad:hover {
+  background-position: right center; /* change the direction of the change here */
+  color: white;
+  text-decoration: none;
+  font-weight: bolder;
+  background-image: linear-gradient(
+    to right,
+    #ff512f 0%,
+    #f09819 51%,
+    #ff512f 100%
+  );
+  cursor: pointer;
+}
+.btngrad:focus {
+  /* background-position: right center; /* change the direction of the change here */
+  /* color: #fff;
+    text-decoration: none; */
+  border: none !important;
+  color: white;
+  font-weight: bolder;
+  background-image: linear-gradient(
+    to right,
+    #ff512f 0%,
+    #f09819 51%,
+    #ff512f 100%
+  );
+  box-shadow: none;
+}
+@media only screen and (max-width: 768px) {
+  .dataInfo {
+    height: auto;
+  }
 }
