--- a/src/components/ProfileCompany/Styles.module.css
+++ b/src/components/ProfileCompany/Styles.module.css
@@ -1,3 +1,8 @@
+* {
+  margin: 0;
+  padding: 0;
+}
+
 .profile {
   /* outline: grey solid 2px; */
   height: 250px !important;
@@ -109,6 +114,45 @@
   );
   box-shadow: none;
 }
+
+.aboutMe {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  /* -webkit-line-clamp: 6;
+  -webkit-box-orient: vertical; */
+}
+.dataAbout {
+  box-shadow: 3px 3px 3px 3px rgba(212, 212, 212, 0.938);
+  background-color: white;
+  height: auto;
+  color: rgb(63, 69, 95);
+}
+.dataAbout div {
+  display: flex;
+  margin-left: 15px;
+  margin-top: 15px;
+  margin-right: 15px;
+  /* box-shadow: 3px 3px 3px 3px rgba(212, 212, 212, 0.938); */
+}
+
+.dataAbout div > h6 {
+  margin-left: 10px;
+}
+.dataAbout div > svg {
+  font-size: 18px;
+}
+.dataAbout div > svg:hover {
+  cursor: pointer;
+}
+.dataAbout div > h6:hover {
+  cursor: pointer;
+}
+
+.dataAbout div > h5:hover {
+  cursor: pointer;
+}
+
 @media only screen and (max-width: 768px) {
   .dataInfo {
     height: auto;
