--- a/src/components/CompanyPosts/Style.module.css
+++ b/src/components/CompanyPosts/Style.module.css
@@ -7,3 +7,19 @@
   box-shadow: 3px 3px 3px 3px rgba(212, 212, 212, 0.938);
   background-color: white;
 }
+.about {
+  /* outline: solid 2px red; */
+  height: 330px;
+  overflow-y: auto;
+  overflow-x: hidden;
+}
+.about::-webkit-scrollbar {
+  display: none;
+}
+.about h6 {
+  text-align: center;
+}
+.about p {
+  margin-left: 5px;
+  margin-right: 5px;
+}
