--- a/src/components/Homepage/Styles.module.css
+++ b/src/components/Homepage/Styles.module.css
@@ -3,24 +3,23 @@
   height: auto;
 }
 .search {
-  margin-left: 0px !important;
-  margin-right: 0px !important;
-  /* width: 100%; */
-  /* height: 50%; */
-  display: flex;
-  justify-content: space-around;
+  margin-left: 0px;
+  margin-right: 0px;
+
+  display: flex !important;
+  justify-content: space-around !important;
 }
 
 .company {
-  border: solid 2px grey;
-  overflow-y: auto;
-  overflow-x: hidden;
-  height: 500px;
-  background-color: #fff;
+  height: 600px !important;
+
+  /* margin-left: 10px; */
   /* max-width: 500px; */
 }
 
 .example {
+  overflow-y: auto;
+  overflow-x: hidden;
   -ms-overflow-style: none;
 }
 .example::-webkit-scrollbar {
@@ -40,11 +39,19 @@
 }
 
 .text {
-  position: -webkit-sticky;
-  position: sticky;
-  top: 0;
   width: 100%;
+  box-shadow: 2px 2px 2px rgba(212, 212, 212, 0.938);
+  border: 1px rgb(151, 141, 141) !important;
 }
+.text:hover {
+  box-shadow: 5px 5px 5px rgba(212, 212, 212, 0.938);
+  border: 1px grey !important;
+}
+.text:focus {
+  box-shadow: 5px 5px 5px rgba(212, 212, 212, 0.938);
+  border: 1px grey !important;
+}
+
 .image {
   width: 50px;
   height: 50px;
@@ -91,3 +98,208 @@
 .nav {
   text-decoration: none !important;
 }
+.cards {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  box-shadow: 2px 2px 2px rgba(212, 212, 212, 0.938);
+  border-radius: 3px;
+}
+.cards:hover {
+  box-shadow: 5px 5px 5px rgba(212, 212, 212, 0.938);
+}
+.cards1 {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+
+.img {
+  height: 125px;
+  width: 150px;
+  border-radius: 5px;
+  /* margin-right: auto; */
+}
+.img1 {
+  height: 145px;
+  width: 150px;
+  border-radius: 5px;
+  box-shadow: 2px 2px 2px rgba(212, 212, 212, 0.938);
+}
+.img1:hover {
+  box-shadow: 5px 5px 5px rgba(212, 212, 212, 0.938);
+}
+.infoCards {
+  box-shadow: 2px 2px 2px rgba(212, 212, 212, 0.938);
+}
+
+.cardsDiv {
+  width: 600px !important;
+  /* text-align: left; */
+}
+.icons {
+  font-size: 20px;
+  color: rgb(107, 98, 99);
+}
+.cards p {
+  color: rgb(63, 69, 95);
+}
+.cards h6 {
+  color: rgb(107, 98, 99);
+}
+.cards h5 {
+  color: rgb(107, 98, 99);
+  font-weight: none;
+}
+.btngrad {
+  text-align: center;
+  text-transform: uppercase;
+  transition: 0.5s;
+  background-size: auto;
+  color: rgb(63, 69, 95);
+  font-weight: bolder;
+  font-size: 15px;
+
+  border: none;
+}
+
+.btngrad:hover {
+  background-position: right center; /* change the direction of the change here */
+  color: white;
+  text-decoration: none;
+  font-weight: bolder;
+  background-image: linear-gradient(
+    to right,
+    #ff512f 0%,
+    #f09819 51%,
+    #ff512f 100%
+  );
+  cursor: pointer;
+}
+.btngrad:focus {
+  /* background-position: right center; /* change the direction of the change here */
+  /* color: #fff;
+    text-decoration: none; */
+  border: none !important;
+  color: white;
+  font-weight: bolder;
+  background-image: linear-gradient(
+    to right,
+    #ff512f 0%,
+    #f09819 51%,
+    #ff512f 100%
+  );
+  box-shadow: none;
+}
+.row2 {
+  background-color: #fff;
+  width: 93%;
+  height: 630px;
+  margin-left: 10px;
+  margin-right: auto;
+  box-shadow: 5px 5px 5px rgba(212, 212, 212, 0.938);
+}
+
+.row1 {
+  background-color: #fff;
+  width: 90%;
+  margin-left: auto;
+  margin-right: 10px;
+  box-shadow: 5px 5px 5px rgba(212, 212, 212, 0.938);
+  height: 630px;
+  border-radius: 3px;
+}
+.about {
+  /* outline: solid 2px red; */
+  height: 400px;
+  overflow-y: auto;
+  overflow-x: hidden;
+  text-align: justify !important;
+}
+.about::-webkit-scrollbar {
+  display: none;
+}
+
+.cartblock1 {
+  float: left;
+  width: 100%;
+
+  background: #fff;
+  /* padding: 30px 20px; */
+  text-align: center;
+
+  box-shadow: 2px 2px 2px rgba(212, 212, 212, 0.938);
+  margin: 0 0 28px;
+}
+.cartblock1 img {
+  width: 100px;
+  height: 100px;
+  border-radius: 10px;
+  padding-top: 0 !important;
+  cursor: pointer;
+}
+.cartblock1 h3 {
+  color: #2a2a2a;
+  font-size: 15px;
+  font-weight: 500;
+  padding: 6px 0;
+  text-transform: uppercase;
+}
+.cartblock1 h3 {
+  text-decoration: none;
+  overflow: hidden;
+  color: #2a2a2a;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-line-clamp: 1;
+  -webkit-box-orient: vertical;
+}
+.cartblock1 h6 {
+  text-transform: uppercase;
+  text-overflow: ellipsis;
+  font-size: 12px;
+  overflow: hidden;
+  display: -webkit-box;
+  -webkit-line-clamp: 1;
+  -webkit-box-orient: vertical;
+  cursor: pointer;
+}
+.rows {
+  margin-top: 10px !important;
+}
+
+@media only screen and (max-width: 769px) {
+  .img {
+    height: 110px;
+  }
+  .cards p {
+    font-size: 11px;
+  }
+  /* .row1 {
+    margin-right: auto;
+  }
+  .row2 {
+    margin-left: auto;
+    height: auto;
+  } */
+}
+@media only screen and (max-width: 995px) {
+  .row1 {
+    margin-right: auto !important;
+  }
+  .row2 {
+    margin-left: auto !important;
+    height: auto;
+    width: 90%;
+  }
+}
+/* @media only screen and (max-width: 1024px) {
+  .row1 {
+    height: 100%;
+  }
+}
+@media only screen and (min-width: 770px) {
+  .row1 {
+    height: auto;
+  }
+} */
